# modbus-rs

./: Cargo.toml
modbus/: Cargo.toml
modbus-test/: Cargo.toml
modbus-test/src/: address.rs  args.rs  connect.rs  main.rs  server.rs  util.rs
modbus/src/: client.rs  connection.rs  consts.rs  encoding.rs  function_code.rs  lib.rs  message.rs  modbus_encapsulated_interface.rs  modbus_exception.rs  server.rs
modbus/src/messages/: exception_message.rs  mask_write_holding_register_request.rs  mask_write_holding_register_response.rs  mod.rs  modbus_encapsulated_interface_request.rs  modbus_encapsulated_interface_response.rs  read_coils_request.rs  read_coils_response.rs  read_device_identification_request.rs  read_device_identification_response.rs  read_discrete_inputs_request.rs  read_discrete_inputs_response.rs  read_holding_registers_request.rs  read_holding_registers_response.rs  read_input_registers_request.rs  read_input_registers_response.rs  write_multiple_coils_request.rs  write_multiple_coils_response.rs  write_multiple_holding_registers_request.rs  write_multiple_holding_registers_response.rs  write_single_coil_request.rs  write_single_coil_response.rs  write_single_holding_register_request.rs  write_single_holding_register_response.rs
modbus/tests/: client_server.rs
